pkg/ibmvpc/examples/out/explain_out/NACLInternal3_all_vpcs_explain_debug.txt
Explaining connectivity from vsi1-ky to vsi3a-ky within test-vpc1-ky
Interpreted Src: vsi1-ky[10.240.10.4]
Interpreted Dst: vsi3a-ky[10.240.30.5]
====================================================================

No connections from vsi1-ky[10.240.10.4] to vsi3a-ky[10.240.30.5];
connection is blocked by egress

Egress: security group sg1-ky allows connection; network ACL acl1-ky blocks connection
Ingress: network ACL acl3-ky allows connection; security group sg1-ky allows connection

Path:
	vsi1-ky[10.240.10.4] -> security group sg1-ky -> subnet1-ky -> |


Details:
~~~~~~~~
Path is disabled; The relevant rules are:
	Egress:
		security group sg1-ky allows connection with the following allow rules
			index: 0, direction: outbound,  conns: protocol: all, remote: 0.0.0.0/0, local: 0.0.0.0/0
		network ACL acl1-ky blocks connection since there are no relevant allow rules

	Ingress:
		network ACL acl3-ky allows connection with the following allow rules
			index: 2, direction: inbound , src: 10.240.10.0/24 , dst: 0.0.0.0/0, conn: all, action: allow
		security group sg1-ky allows connection with the following allow rules
			index: 1, direction: inbound,  conns: protocol: all, remote: 0.0.0.0/0, local: 0.0.0.0/0

------------------------------------------------------------------------------------------------------------------------
